--- a/style.css
+++ b/style.css
@@ -1,10 +1,32 @@
 /* FONTS*/
 
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 400;
+  src: url('./assets/fonts/Roboto-Regular.woff2') format('woff2');
+  src: url('./assets/fonts/Roboto-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 700;
+  src: url('./assets/fonts/Roboto-Bold.woff2') format('woff2');
+  src: url('./assets/fonts/Roboto-BoldItalic.woff') format(('woff'));
+}
+
 /* CSS CUSTOM PROPERTIES */
+
+:root {
+  --ff-primary: 'Roboto', sans-serif;
+}
 
 /* CSS RESET */
 
 /* BODY/GLOBAL */
+
+body {
+  font-family: var(--ff-primary);
+}
 
 /* UTILIY */
 
