--- a/style.css
+++ b/style.css
@@ -18,6 +18,20 @@
 
 :root {
   --ff-primary: 'Roboto', sans-serif;
+
+  --fs-sm: 0.75rem;
+  --fs-base: 1rem;
+  --fs-baseMed: 1.25rem;
+  --fs-md: 1.5rem;
+  --fs-lg: 2rem;
+
+  --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-neutral-400: hsl(227, 100%, 97%);
+
+  --clr-primary-400: hsl(231, 54%, 23%);
+
+  --clr-accent-400: hsla(231, 54%, 23%, 0.38);
+  --clr-accent-800: hsla(231, 54%, 23%, 0.804);
 }
 
 /* CSS RESET */
