--- a/style.css
+++ b/style.css
@@ -56,6 +56,16 @@ body {
   font-family: var(--ff-primary);
 }
 
-/* UTILIY */
+/* UTILITY */
+
+.visually-hidden:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
 
 /* COMPONENTS */
