--- a/style.css
+++ b/style.css
@@ -101,9 +101,11 @@ body {
 
 .plan--btn:hover,
 .plan--btn:focus {
-  box-shadow: none;
-  background: var(--clr-accent-800);
+  color: var(--clr-primary-400);
+  background: var(--clr-neutral-100);
+  outline: 1px solid var(--clr-primary-400);
   transition: all 400ms ease-in-out;
+  transform: scale(1.1);
 }
 
 /* ICON */
@@ -173,6 +175,13 @@ body {
   border-radius: 0.8rem;
   border: 2px solid var(--clr-accent-400);
   cursor: pointer;
+}
+
+.download:hover {
+  color: var(--clr-neutral-100);
+  background: var(--clr-accent-800);
+  transition: all 400ms ease-in-out;
+  transform: scale(1.1);
 }
 
 .download__amount {
